[package]
name = "mm"
version = "0.1.0"
edition = "2021"

[dependencies]
os = { path = "../.." }
config = {git = "https://github.com/Baozixu99/config.git"}
buddy_system_allocator = "0.8"
spin = "0.7"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
bitflags = "1.3"
log = "0.4"
xmas-elf = "0.7.0"